--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "react-modal": "^3.16.3"
+    "react-modal": "^3.16.3",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -25,6 +26,7 @@
     "@types/react-dom": "^19",
     "@types/react-icons": "^2.2.7",
     "@types/react-modal": "^3.16.3",
+    "@types/recharts": "^1.8.29",
     "eslint": "^9",
     "eslint-config-next": "15.4.0-canary.51",
     "tailwindcss": "^4",
