--- a/.github/workflows/docker-ghcr.yml
+++ b/.github/workflows/docker-ghcr.yml
@@ -28,7 +28,8 @@ jobs:
       - name: Build amd64 image
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./frontend
+          file: ./infrastructure/docker/Dockerfile.frontend
           platforms: linux/amd64
           push: true
           tags: ghcr.io/${{ github.repository }}:amd64
@@ -53,7 +54,8 @@ jobs:
       - name: Build arm64 image
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./frontend
+          file: ./infrastructure/docker/Dockerfile.frontend
           platforms: linux/arm64
           push: true
           tags: ghcr.io/${{ github.repository }}:arm64
