--- a/package.json
+++ b/package.json
@@ -1,35 +1,44 @@
 {
-  "name": "ems",
-  "version": "0.1.0",
+  "name": "ecogrid-ems-monorepo",
+  "version": "1.0.0",
+  "description": "EcoGrid Energy Management System - Full Stack Monorepo",
   "private": true,
+  "workspaces": [
+    "frontend",
+    "backend/*",
+    "shared/*"
+  ],
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "npm run dev --workspace=frontend",
+    "build": "npm run build --workspace=frontend",
+    "start": "npm run start --workspace=frontend",
+    "lint": "npm run lint --workspace=frontend",
+    "frontend:dev": "npm run dev --workspace=frontend",
+    "frontend:build": "npm run build --workspace=frontend",
+    "frontend:start": "npm run start --workspace=frontend",
+    "frontend:lint": "npm run lint --workspace=frontend",
+    "install:all": "npm install --workspaces",
+    "clean": "rm -rf */node_modules */.next */dist && npm install",
+    "docker:dev": "docker-compose up -d",
+    "docker:build": "docker-compose build",
+    "docker:down": "docker-compose down"
   },
-  "dependencies": {
-    "@types/react-map-gl": "^6.1.7",
-    "mapbox-gl": "^3.12.0",
-    "next": "15.4.0-canary.51",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-icons": "^5.5.0",
-    "react-modal": "^3.16.3",
-    "recharts": "^2.15.3"
-  },
+  "keywords": [
+    "energy-management",
+    "iot",
+    "renewable-energy",
+    "monorepo",
+    "nextjs",
+    "spring-boot"
+  ],
+  "author": "EcoGrid Team",
+  "license": "MIT",
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/react-icons": "^2.2.7",
-    "@types/react-modal": "^3.16.3",
-    "@types/recharts": "^1.8.29",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.0-canary.51",
-    "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
