chore: update gitignore to exclude all VS Code workspace files
- Remove VS Code workspace files from git tracking
- Keep all .vscode/ configurations local for developer preferences
- Add *.code-workspace pattern to ignore workspace files
- Developers can maintain their own IDE settings without conflicts

--- a/.gitignore
+++ b/.gitignore
@@ -176,13 +176,9 @@ $RECYCLE.BIN/
 # =====================================================
 # IDE & Editor Files
 # =====================================================
-# VSCode
+# VSCode - Keep all workspace configurations local
 .vscode/
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
+*.code-workspace
 
 # IntelliJ IDEA
 .idea/
