feat: implement complete JWT authentication service
- Add User entity with JPA annotations and validation
- Implement JWT token generation and validation with JJWT 0.12.3
- Create AuthController with registration, login, and password reset endpoints
- Add UserService with bcrypt password encoding
- Configure Spring Security with JWT authentication filter
- Add Redis session management support
- Update Maven dependencies for JWT and security

--- a/backend/auth-service/pom.xml
+++ b/backend/auth-service/pom.xml
@@ -75,6 +75,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Shared Library -->
+        <dependency>
+            <groupId>com.ecogrid.ems</groupId>
+            <artifactId>shared</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <!-- Redis for session management -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
