feat: implement complete API Gateway with security and routing
- Add JwtAuthenticationFilter for token validation across all routes
- Implement RequestLoggingFilter for request/response monitoring
- Create FallbackController with circuit breaker patterns
- Configure service routing for all microservices (ports 8081-8084)
- Add SecurityConfig with CORS and security policies
- Configure rate limiting and timeout settings
- Add JWT token validation utilities
- Update Maven dependencies for Spring Cloud Gateway

--- a/backend/api-gateway/pom.xml
+++ b/backend/api-gateway/pom.xml
@@ -65,6 +65,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Circuit Breaker -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
