--- a/backend/api-gateway/src/main/resources/application.yml
+++ b/backend/api-gateway/src/main/resources/application.yml
@@ -8,45 +8,66 @@ spring:
   cloud:
     gateway:
       routes:
-        # Auth Service Routes
+        # Auth Service Routes (Public endpoints)
         - id: auth-service
           uri: http://localhost:8081
           predicates:
             - Path=/api/auth/**
           filters:
             - StripPrefix=1
+            - name: RequestLoggingFilter
 
-        # Device Service Routes
+        # Device Service Routes (Protected)
         - id: device-service
           uri: http://localhost:8082
           predicates:
             - Path=/api/devices/**
           filters:
             - StripPrefix=1
+            - name: JwtAuthenticationFilter
+            - name: RequestLoggingFilter
             - name: RequestRateLimiter
               args:
                 redis-rate-limiter.replenishRate: 10
                 redis-rate-limiter.burstCapacity: 20
+                redis-rate-limiter.requested-tokens: 1
+            - name: CircuitBreaker
+              args:
+                name: device-service
+                fallbackUri: forward:/fallback/device-service
 
-        # Analytics Service Routes
+        # Analytics Service Routes (Protected)
         - id: analytics-service
           uri: http://localhost:8083
           predicates:
             - Path=/api/analytics/**
           filters:
             - StripPrefix=1
+            - name: JwtAuthenticationFilter
+            - name: RequestLoggingFilter
             - name: RequestRateLimiter
               args:
                 redis-rate-limiter.replenishRate: 5
                 redis-rate-limiter.burstCapacity: 10
+                redis-rate-limiter.requested-tokens: 1
+            - name: CircuitBreaker
+              args:
+                name: analytics-service
+                fallbackUri: forward:/fallback/analytics-service
 
-        # Notification Service Routes
+        # Notification Service Routes (Protected)
         - id: notification-service
           uri: http://localhost:8084
           predicates:
             - Path=/api/notifications/**
           filters:
             - StripPrefix=1
+            - name: JwtAuthenticationFilter
+            - name: RequestLoggingFilter
+            - name: CircuitBreaker
+              args:
+                name: notification-service
+                fallbackUri: forward:/fallback/notification-service
 
       # Global CORS configuration
       globalcors:
