feat: implement complete IoT device management service
- Add Site and Device entities with JPA relationships
- Implement DeviceController with comprehensive CRUD REST endpoints
- Create SiteService and DeviceService for business logic
- Add MQTT integration for real-time device telemetry
- Implement Kafka event publishing (DeviceTelemetryEvent, DeviceStatusEvent)
- Add DeviceEventService for asynchronous event processing
- Configure MQTT broker connection and message handling
- Add device status monitoring with last-seen timestamps
- Update Maven dependencies for MQTT, Kafka, and JPA

--- a/backend/device-service/pom.xml
+++ b/backend/device-service/pom.xml
@@ -51,10 +51,23 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Shared Library -->
+        <dependency>
+            <groupId>com.ecogrid.ems</groupId>
+            <artifactId>shared</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <!-- MQTT for IoT communication -->
         <dependency>
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-mqtt</artifactId>
+        </dependency>
+
+        <!-- Kafka for event streaming -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
         </dependency>
 
         <!-- Testing -->
