--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,11 +46,48 @@ services:
       - mosquitto_data:/mosquitto/data
       - mosquitto_logs:/mosquitto/log
 
+  # Message Queue - Kafka
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.4.0
+    container_name: ems-zookeeper
+    restart: unless-stopped
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    volumes:
+      - zookeeper_data:/var/lib/zookeeper/data
+      - zookeeper_logs:/var/lib/zookeeper/log
+
+  kafka:
+    image: confluentinc/cp-kafka:7.4.0
+    container_name: ems-kafka
+    restart: unless-stopped
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_DELETE_TOPIC_ENABLE: "true"
+    volumes:
+      - kafka_data:/var/lib/kafka/data
+    depends_on:
+      - zookeeper
+    healthcheck:
+      test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   # Backend Services
   api-gateway:
     build:
       context: ./backend/api-gateway
-      dockerfile: ../../infrastructure/docker/Dockerfile.backend
+      dockerfile: ../../infrastructure/docker/Dockerfile.api-gateway
     container_name: ems-api-gateway
     ports:
       - "8080:8080"
@@ -66,7 +103,7 @@ services:
   auth-service:
     build:
       context: ./backend/auth-service
-      dockerfile: ../../infrastructure/docker/Dockerfile.backend
+      dockerfile: ../../infrastructure/docker/Dockerfile.auth-service
     container_name: ems-auth-service
     ports:
       - "8081:8081"
@@ -88,7 +125,7 @@ services:
   device-service:
     build:
       context: ./backend/device-service
-      dockerfile: ../../infrastructure/docker/Dockerfile.backend
+      dockerfile: ../../infrastructure/docker/Dockerfile.device-service
     container_name: ems-device-service
     ports:
       - "8082:8082"
@@ -98,19 +135,22 @@ services:
       - DB_NAME=ems_devices
       - DB_USERNAME=ems_user
       - DB_PASSWORD=ems_password
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
       - MQTT_BROKER_URL=tcp://mosquitto:1883
     depends_on:
       postgres:
         condition: service_healthy
       mosquitto:
         condition: service_started
+      kafka:
+        condition: service_healthy
     profiles:
       - backend
 
   analytics-service:
     build:
       context: ./backend/analytics-service
-      dockerfile: ../../infrastructure/docker/Dockerfile.backend
+      dockerfile: ../../infrastructure/docker/Dockerfile.analytics-service
     container_name: ems-analytics-service
     ports:
       - "8083:8083"
@@ -129,7 +169,7 @@ services:
   notification-service:
     build:
       context: ./backend/notification-service
-      dockerfile: ../../infrastructure/docker/Dockerfile.backend
+      dockerfile: ../../infrastructure/docker/Dockerfile.notification-service
     container_name: ems-notification-service
     ports:
       - "8084:8084"
@@ -163,3 +203,6 @@ volumes:
   redis_data:
   mosquitto_data:
   mosquitto_logs:
+  zookeeper_data:
+  zookeeper_logs:
+  kafka_data:
