--- a/infrastructure/docker/Dockerfile.analytics-service
+++ b/infrastructure/docker/Dockerfile.analytics-service
@@ -1,4 +1,4 @@
-# Multi-stage Dockerfile for Spring Boot services
+# Multi-stage Dockerfile for Analytics Service
 FROM eclipse-temurin:21-jdk-alpine AS builder
 
 # Set working directory
@@ -19,7 +19,7 @@ FROM eclipse-temurin:21-jre-alpine
 
 # Add non-root user
 RUN addgroup -g 1001 -S ems && \
-    adduser -S ems -u 1001 -G ems
+  adduser -S ems -u 1001 -G ems
 
 # Set working directory
 WORKDIR /app
@@ -33,10 +33,10 @@ USER ems
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=30s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:8080/actuator/health || exit 1
+  CMD wget --no-verbose --tries=1 --spider http://localhost:8083/actuator/health || exit 1
 
 # Expose port
-EXPOSE 8080
+EXPOSE 8083
 
 # JVM options for container environment
 ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -Djava.security.egd=file:/dev/./urandom"
