Backend Phase Implementation: Authentication, Infrastructure, and Microservices
✅ COMPLETED:
- Spring Boot microservices setup (auth, device, analytics, notification services)
- Shared library integration with proper Docker build contexts
- PostgreSQL database configuration (port 5433 to avoid conflicts)
- Redis caching and session management
- Kafka message queue for inter-service communication
- MQTT broker for IoT device communication
- Docker containerization for all backend services
- Database schemas and application.yml configurations
- Health checks and actuator endpoints

🔧 INFRASTRUCTURE CHANGES:
- Modified Docker Compose to use PostgreSQL on port 5433
- Updated all application.yml files with proper database ports
- Fixed Docker build contexts for shared library dependency resolution
- Added multi-stage Docker builds for all services
- Implemented proper service networking and health checks

⚠️ KNOWN ISSUES:
- Redis health checks failing (non-blocking, core functionality works)
- API Gateway routing needs debugging (individual services respond correctly)
- TestContainers may need configuration for PostgreSQL port change

🎯 BACKEND STATUS: Core functionality verified working
- Auth service responds to login requests (401 expected for invalid creds)
- Device service returns paginated empty results (working correctly)
- PostgreSQL connections established and working
- Services can be accessed individually on their respective ports

--- a/backend/auth-service/src/main/resources/application.yml
+++ b/backend/auth-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     name: auth-service
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/ems_auth
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:ems_auth}
     username: ${DB_USERNAME:ems_user}
     password: ${DB_PASSWORD:ems_password}
     driver-class-name: org.postgresql.Driver
