--- a/backend/notification-service/src/main/resources/application.yml
+++ b/backend/notification-service/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
   
   # Database Configuration
   datasource:
-    url: jdbc:postgresql://localhost:5432/ems
-    username: ems_user
-    password: ems_password
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:ems}
+    username: ${DB_USERNAME:ems_user}
+    password: ${DB_PASSWORD:ems_password}
     driver-class-name: org.postgresql.Driver
   
   jpa:
