--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_USER: ems_user
       POSTGRES_PASSWORD: ems_password
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./infrastructure/docker/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
@@ -102,14 +102,15 @@ services:
 
   auth-service:
     build:
-      context: ./backend/auth-service
-      dockerfile: ../../infrastructure/docker/Dockerfile.auth-service
+      context: ./backend
+      dockerfile: ../infrastructure/docker/Dockerfile.auth-service
     container_name: ems-auth-service
     ports:
       - "8081:8081"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - DB_HOST=postgres
+      - DB_PORT=5432
       - DB_NAME=ems_auth
       - DB_USERNAME=ems_user
       - DB_PASSWORD=ems_password
@@ -124,14 +125,15 @@ services:
 
   device-service:
     build:
-      context: ./backend/device-service
-      dockerfile: ../../infrastructure/docker/Dockerfile.device-service
+      context: ./backend
+      dockerfile: ../infrastructure/docker/Dockerfile.device-service
     container_name: ems-device-service
     ports:
       - "8082:8082"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - DB_HOST=postgres
+      - DB_PORT=5432
       - DB_NAME=ems_devices
       - DB_USERNAME=ems_user
       - DB_PASSWORD=ems_password
@@ -149,14 +151,15 @@ services:
 
   analytics-service:
     build:
-      context: ./backend/analytics-service
-      dockerfile: ../../infrastructure/docker/Dockerfile.analytics-service
+      context: ./backend
+      dockerfile: ../infrastructure/docker/Dockerfile.analytics-service
     container_name: ems-analytics-service
     ports:
       - "8083:8083"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - DB_HOST=postgres
+      - DB_PORT=5432
       - DB_NAME=ems_analytics
       - DB_USERNAME=ems_user
       - DB_PASSWORD=ems_password
@@ -168,14 +171,15 @@ services:
 
   notification-service:
     build:
-      context: ./backend/notification-service
-      dockerfile: ../../infrastructure/docker/Dockerfile.notification-service
+      context: ./backend
+      dockerfile: ../infrastructure/docker/Dockerfile.notification-service
     container_name: ems-notification-service
     ports:
       - "8084:8084"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - DB_HOST=postgres
+      - DB_PORT=5432
       - DB_NAME=ems_notifications
       - DB_USERNAME=ems_user
       - DB_PASSWORD=ems_password
