--- a/backend/notification-service/src/main/resources/application.yml
+++ b/backend/notification-service/src/main/resources/application.yml
@@ -23,9 +23,9 @@ spring:
   
   # Kafka Configuration
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
     consumer:
-      group-id: notification-service
+      group-id: ${KAFKA_CONSUMER_GROUP_ID:notification-service}
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
@@ -37,10 +37,10 @@ spring:
   
   # Email Configuration
   mail:
-    host: localhost
-    port: 1025 # Using MailHog for development
-    username: 
-    password: 
+    host: ${MAIL_HOST:localhost}
+    port: ${MAIL_PORT:1025} # Using MailHog for development
+    username: ${MAIL_USERNAME:}
+    password: ${MAIL_PASSWORD:} 
     properties:
       mail:
         smtp:
