--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react-map-gl": "^6.1.7",
+    "axios": "^1.12.2",
+    "js-cookie": "^3.0.5",
     "mapbox-gl": "^3.12.0",
     "next": "15.4.0-canary.51",
     "react": "19.1.0",
