--- a/infrastructure/docker/Dockerfile.api-gateway
+++ b/infrastructure/docker/Dockerfile.api-gateway
@@ -4,12 +4,15 @@ FROM eclipse-temurin:21-jdk-alpine AS builder
 # Set working directory
 WORKDIR /app
 
-# Copy Maven files
-COPY pom.xml .
-COPY src src/
-
-# Install Maven
+# Install Maven first
 RUN apk add --no-cache maven
+
+# Copy Maven files and download dependencies (cached layer)
+COPY pom.xml .
+RUN mvn dependency:go-offline -B
+
+# Copy source code (this layer changes frequently)
+COPY src src/
 
 # Build the application
 RUN mvn clean package -DskipTests
