--- a/infrastructure/docker/mosquitto.conf
+++ b/infrastructure/docker/mosquitto.conf
@@ -6,8 +6,8 @@ listener 9001
 protocol websockets
 
 # Security settings
-allow_anonymous false
-password_file /mosquitto/config/passwd
+allow_anonymous true
+# password_file /mosquitto/config/passwd
 
 # Logging
 log_dest file /mosquitto/log/mosquitto.log
@@ -26,7 +26,7 @@ max_connections 1000
 max_keepalive 65535
 
 # Message settings
-message_size_limit 268435456
+max_packet_size 268435456
 
 # Topic patterns for EMS
 # ems/{siteId}/{deviceId}/telemetry
