--- a/backend/auth-service/src/main/resources/application-docker.yml
+++ b/backend/auth-service/src/main/resources/application-docker.yml
@@ -3,9 +3,19 @@
 # Use: java -jar app.jar --spring.profiles.active=docker
 
 spring:
-  # Disable Redis for Docker development (until we fix networking)
+  # Redis configuration for Docker environment
   redis:
-    host: # empty to disable Redis
+    host: ${REDIS_HOST:redis}
+    port: ${REDIS_PORT:6379}
+    password: ${REDIS_PASSWORD:}
+    database: 0
+    timeout: 60000ms
+    lettuce:
+      pool:
+        max-active: 10
+        max-idle: 10
+        min-idle: 1
+        time-between-eviction-runs: 10s
     
   # Docker-specific database configuration
   datasource:
