--- a/backend/api-gateway/src/main/resources/application.yml
+++ b/backend/api-gateway/src/main/resources/application.yml
@@ -3,7 +3,14 @@ server:
 
 spring:
   application:
-    name: api-gateway
+        - id: analytics-service
+          uri: http://${ANALYTICS_SERVICE_HOST:analytics-service}:${ANALYTICS_SERVICE_PORT:8083}
+          predicates:
+            - Path=/api/analytics/**
+          filters:
+            - RewritePath=/api/analytics/(?<path>.*), /api/v1/analytics/$\{path}
+            - name: JwtAuthenticationFilter
+            - name: RequestLoggingFiltereway
 
   cloud:
     gateway:
@@ -14,16 +21,16 @@ spring:
           predicates:
             - Path=/api/auth/**
           filters:
-            - RewritePath=/api/auth/(?<path>.*), /auth/api/v1/auth/$\{path}
+            - RewritePath=/api/auth/(?<path>.*), /api/v1/auth/$\{path}
             - name: RequestLoggingFilter
 
         # Device Service Routes (Protected)
         - id: device-service
           uri: http://${DEVICE_SERVICE_HOST:device-service}:${DEVICE_SERVICE_PORT:8082}
           predicates:
-            - Path=/api/devices/**
+            - Path=/api/devices,/api/devices/**
           filters:
-            - StripPrefix=1
+            - RewritePath=/api/devices(?<path>.*), /api/v1/devices$\{path}
             - name: JwtAuthenticationFilter
             - name: RequestLoggingFilter
             # Temporarily disabled until Redis is stable
@@ -37,13 +44,27 @@ spring:
                 name: device-service
                 fallbackUri: forward:/fallback/device-service
 
+        # Site Service Routes (Protected) - handled by Device Service
+        - id: site-service
+          uri: http://${DEVICE_SERVICE_HOST:device-service}:${DEVICE_SERVICE_PORT:8082}
+          predicates:
+            - Path=/api/sites,/api/sites/**
+          filters:
+            - RewritePath=/api/sites(?<path>.*), /api/v1/sites$\{path}
+            - name: JwtAuthenticationFilter
+            - name: RequestLoggingFilter
+            - name: CircuitBreaker
+              args:
+                name: device-service
+                fallbackUri: forward:/fallback/device-service
+
         # Analytics Service Routes (Protected)
         - id: analytics-service
           uri: http://${ANALYTICS_SERVICE_HOST:analytics-service}:${ANALYTICS_SERVICE_PORT:8083}
           predicates:
             - Path=/api/analytics/**
           filters:
-            - StripPrefix=1
+            - RewritePath=/api/analytics/(?<path>.*), /api/v1/analytics/$\{path}
             - name: JwtAuthenticationFilter
             - name: RequestLoggingFilter
             # Temporarily disabled until Redis is stable
@@ -61,9 +82,9 @@ spring:
         - id: notification-service
           uri: http://${NOTIFICATION_SERVICE_HOST:notification-service}:${NOTIFICATION_SERVICE_PORT:8084}
           predicates:
-            - Path=/api/notifications/**
+            - Path=/api/notifications,/api/notifications/**
           filters:
-            - StripPrefix=1
+            - RewritePath=/api/notifications(?<path>.*), /api/notifications$\{path}
             - name: JwtAuthenticationFilter
             - name: RequestLoggingFilter
             - name: CircuitBreaker
