feat: Phase 5.3 - Analytics Service EMS API endpoints
- Implemented comprehensive EMS analytics controller with 10 specialized endpoints
- Added EMSAnalyticsService with mock data for parallel development
- Created detailed response DTOs for site dashboard, device metrics, and performance data
- Added EMS-specific endpoints: dashboard, alerts, efficiency, trends, and forecasting
- Implemented device type-specific metrics with time-series data support
- Added proper error handling and validation across all EMS endpoints

Key API endpoints added:
- GET /api/v1/analytics/ems/sites/{siteId}/dashboard - Complete site overview
- GET /api/v1/analytics/ems/sites/{siteId}/devices/{deviceType}/metrics - Device-specific data
- GET /api/v1/analytics/ems/sites/{siteId}/alerts - Real-time alert management
- GET /api/v1/analytics/ems/sites/{siteId}/efficiency - Energy efficiency metrics
- GET /api/v1/analytics/ems/sites/{siteId}/trends - Historical performance trends
- Additional endpoints for forecasting, peak usage, grid interaction, and cost analysis

--- a/backend/analytics-service/pom.xml
+++ b/backend/analytics-service/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.ecogrid.ems</groupId>
+            <artifactId>shared</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
