feat: Complete Phase 5.5 Integration Testing Enhancement
🧪 Major Testing Infrastructure Improvements:
- DeviceTelemetryPipelineTest: End-to-end MQTT → Kafka → Database integration testing
- Complete telemetry processing pipeline with embedded MQTT broker and Kafka
- BMSTelemetryDTO parsing with @JsonFormat timestamp compatibility fixes
- DeviceStatusCache entity management and transaction handling
- Comprehensive Kafka logging suppression (logback-test.xml, application-test.yml)

🔧 Enhanced Device Service Components:
- DeviceTelemetryProcessor: Enhanced debug logging with emoji markers for data flow tracing
- RealTimeAggregationService: Kafka-based aggregation service with WebSocket integration
- DeviceStatusCache: Proper entity relationships and caching mechanisms
- Repository layer enhancements for telemetry and status cache management

📋 Test Configuration & Infrastructure:
- TestContainers integration (PostgreSQL, Kafka, MQTT broker)
- IntegrationTestConfiguration: Mock WebSocket and test bean configuration
- TestMqttConfig: Embedded MQTT broker for integration testing
- Multiple test resource configurations for different testing scenarios

🚨 Pipeline Coverage Analysis Completed:
- Identified analytics aggregation testing gaps (RealTimeAggregationService)
- Documented WebSocket real-time broadcasting limitations (mocked only)
- Multi-device-type processing coverage assessment (BMS only currently)
- Comprehensive testing strategy documentation updates

📊 Testing Results:
- 7/7 integration tests passing (DeviceTelemetryPipelineTest)
- Complete MQTT → Kafka → DB pipeline verified working
- Telemetry data persistence: voltage=52.4, current=15.2 validated
- DeviceStatusCache updates: OFFLINE → ONLINE status transitions confirmed

📖 Documentation & Configuration Updates:
- Updated Project.md with current testing status and identified gaps
- Enhanced .gitignore to exclude MQTT broker runtime data
- Added Phase 5.5 completion details and remaining task roadmap
- Documen

--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,12 @@ coverage
 .grunt
 bower_components
 
+# MQTT Broker data (Moquette)
+backend/**/data/
+**/moquette_store.h2*
+**/.moquette_uuid
+**/checkpoint.properties
+
 # =====================================================
 # Operating System Files
 # =====================================================
