fix: Add .lck files and MQTT test directories to .gitignore
- Exclude .lck lock files generated by Moquette MQTT broker
- Ignore temporary MQTT client directories created during integration tests
- Prevent test artifacts from being committed to repository

--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,10 @@ backend/**/data/
 **/moquette_store.h2*
 **/.moquette_uuid
 **/checkpoint.properties
+# MQTT test client directories and lock files
+**/device-service-test-*-tcplocalhost*/
+**/test-device-client-*-tcplocalhost*/
+**/.lck
 
 # =====================================================
 # Operating System Files
